welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite(); droite();
if (true) { while (!estFaceMur()) {
while (!estSurBiscuit())&(!estFaceMur()) { avance() }
prendBiscuit();
while (!estSurBiscuit()) { recule() }
avance();
poseBiscuit();
avance(); } }
else { droite();avance();gauche();avance(); }
